# jira_timesheet

./: .cursorrules  .dockerignore  .env.dev.example  .env.prod.bak  .env.prod.example  .env.production  .env.production.example  .gitignore  CLAUDE.md  CODEX.md  Caddyfile  Caddyfile.prod  Caddyfile.prod.example  ENTERPRISE_UPGRADE_PLAN.md  GEMINI.md  LICENSE  README.md  ROADMAP.md  agent.md  check_db_projects.py  context.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  force_sync_users.py  idea_activity_aggregator.md  logs.txt  package-lock.json  package.json  playwright-results.json  playwright.config.ts  pyproject.toml  test_output.txt  tmp_check_releases.py  tmp_cleanup_users.py  tmp_test_filter.py
backend/: .coveragerc  .env.example  .env.local  Dockerfile  add_docstrings.py  alembic.ini  check_counts.py  cleanup_db.py  cleanup_test_org.py  force_sync_projects.py  full_reinit.py  full_sync.py  init_db.py  list_users.py  main.py  pyproject.toml  requirements.txt  seed.py  seed_hierarchy.py  setup_test_org.py  sync_projects.py  tmp_check_db.py  tmp_check_users.py  tmp_migrate.py  tmp_sync_verify.py  update_routers.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0f2b6bedcb59_final_enterprise_refactoring.py  20260317_add_issue_types.py  20260317_create_user_org_units_table.py  34557aeab2d1_initial_dev.py  3a4a1dc3e5f7_add_calendar_events_table.py  59a079ff4d1e_add_org_units_to_user.py  6161318b8de2_add_user_org_units_relationship.py  836d72c4eb9e_add_timezone_to_user.py  af70a42aa7dc_add_needs_password_change_to_users.py  ee8745040552_move_resource_fields_to_jira_user.py
backend/api/: deps.py  router.py
backend/api/endpoints/: ai.py  approvals.py  auth.py  auth_sso.py  calendar.py  leave.py  notifications.py  org.py  projects.py  reports.py  slack.py  sync.py  timesheet.py  users.py
backend/core/: audit.py  audit_events.py  config.py  context.py  database.py  exceptions.py  logging_config.py  middleware.py  security.py  worker.py
backend/crud/: base.py  category.py  notification.py  org.py  project.py  settings.py  timesheet.py  user.py
backend/models/: __init__.py  audit.py  base.py  calendar.py  category.py  leave.py  notification.py  org.py  project.py  settings.py  timesheet.py  user.py
backend/schemas/: ai.py  leave.py  notification.py  org.py  pagination.py  project.py  reports.py  timesheet.py  user.py
backend/scripts/: add_docstrings.py  check_counts.py  cleanup_db.py  cleanup_test_org.py  debug_jira_more.py  debug_jira_sync.py  force_sync_users.py  full_reinit.py  full_sync.py  promote_admins.py  setup_test_org.py  test_jira_api.py  update_routers.py
backend/services/: ai_chat.py  analytics.py  auth.py  calendar.py  jira.py  notification.py  slack.py  timesheet.py
backend/tests/: conftest.py  debug_path.py  test_api.py  test_api_endpoints.py  test_api_extra.py  test_api_push.py  test_approvals_mega.py  test_approvals_roles.py  test_audit_log.py  test_auth_api.py  test_auth_sso_google.py  test_calendar_full.py  test_control_sheet.py  test_crud.py  test_crud_extended.py  test_employees_management.py  test_enterprise_features.py  test_enterprise_sync.py  test_final_coverage.py  test_final_push.py  test_jira_extended.py  test_jira_sync.py  test_jira_sync_unit.py  test_leave_api.py  test_leave_mega.py  test_leave_models.py  test_models.py  test_notifications_extra.py  test_org_full.py  test_security.py  test_services.py  test_services_extra.py  test_slack_api.py  test_slack_extra.py  test_timesheet_extended.py  tmp_test_org.py
frontend/: Dockerfile  api_client.py  app.py  auth_utils.py  gantt_widget.py  i18n.py  pyproject.toml  requirements.txt  state_manager.py  ui_components.py
plans/: plan_global_roadmap_20260314.md
scripts/: append_api.py  check_db_projects.py  cleanup_db.py  debug_jira_sprints.py  debug_jira_sync.py  fix_tests.py  force_sync_users.py  refactor.py  tmp_check_releases.py  tmp_cleanup_users.py  tmp_jira_test.py  tmp_run_sync.py  tmp_test_filter.py  update_favicons.py
tests/: test_e2e.py  test_leave_e2e.py
trace_extract/: 0-trace.network  0-trace.stacks  (+2 more)
(+559 files in other folders)
