[project]
name = "jira-timesheet"
version = "0.1.0"
description = "Enterprise Jira Timesheet System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "fastapi-cache2[redis]>=0.2.2",
    "holidays>=0.91",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "redis>=4.6.0",
    "saq>=0.26.1",
    "sqlalchemy[asyncio]>=2.0.47",
    "uvicorn[standard]>=0.41.0",
]

[tool.uv]
workspace = { members = ["backend", "frontend"] }

[tool.ruff]
# Soft rules for enterprise order
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "Depends", "fastapi.Depends", "fastapi.params.Depends",
    "Query", "fastapi.Query", "fastapi.params.Query",
    "Header", "fastapi.Header", "fastapi.params.Header",
    "Cookie", "fastapi.Cookie", "fastapi.params.Cookie",
    "Body", "fastapi.Body", "fastapi.params.Body",
    "Path", "fastapi.Path", "fastapi.params.Path",
    "Security", "fastapi.Security", "fastapi.params.Security",
    "deps.require_role", "require_role", "api.deps.require_role"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = ["./backend"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["backend/tests"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "fastapi-cache2[redis]>=0.2.2",
    "holidays>=0.91",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "passlib[bcrypt]>=1.7.4",
    "playwright>=1.58.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "redis>=4.6.0",
    "ruff>=0.15.4",
    "sqlalchemy>=2.0.47",
    "uvicorn[standard]>=0.41.0",
]
