[project]
name = "backend"
version = "0.1.0"
description = "Backend for Jira Timesheet System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg",
    "alembic",
    "pyjwt",
    "passlib[bcrypt]",
    "pydantic[email]",
    "pydantic-settings",
    "python-multipart",
    "redis",
    "saq",
    "fastapi-cache2[redis]",
    "fastapi-limiter>=0.1.6,<0.2.0",
    "python-dotenv",
    "httpx",
    "pandas",
    "openpyxl",
    "pytest",
    "pytest-asyncio",
    "aiosqlite",
    "python-dateutil",
    "holidays",
    "structlog>=25.5.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "fastapi-sso>=0.21.0",
    "vanna>=2.0.2",
    "openai>=2.24.0",
    "chromadb>=1.5.2",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
